Fixed details for Dark Mode, and added hover when hovering over cards

--- a/prueba-mensajeros-urbanos/src/app/header/header.component.css
+++ b/prueba-mensajeros-urbanos/src/app/header/header.component.css
@@ -27,7 +27,6 @@ h5 {
 .dark-mode {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   font-weight: bold;
   padding: 20px;
   gap: 20px;
@@ -45,10 +44,7 @@ h5 {
 .button {
   width: 30px;
   height: 30px;
+  border-radius: 15px;
+  background-color: var(--button-color);
+  cursor: pointer;
 }
-
-/* @media only screen and (max-width: 375px) {
-  .header {
-    background-color: red;
-  }
-} */
