--- a/prueba-mensajeros-urbanos/src/styles.css
+++ b/prueba-mensajeros-urbanos/src/styles.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* height: 100vh; */
 }
 
 body {
@@ -18,6 +17,8 @@ body {
   --bg-color-card: hsl(227, 47%, 96%);
   --text-color: hsl(228, 12%, 44%);
   --text-color-log: hsl(230, 17%, 14%);
+  --toggle-color: hsl(230, 22%, 74%);
+  --button-color: hsl(228, 28%, 20%);
 }
 
 [data-theme="dark"] {
@@ -26,4 +27,6 @@ body {
   --bg-color-card: hsl(228, 28%, 20%);
   --text-color: hsl(228, 34%, 66%);
   --text-color-log: hsl(0, 0%, 100%);
+  --toggle-color: hsla(210, 85%, 33%, 0.26);
+  --button-color: hsl(227, 47%, 96%);
 }
